# ovis

./: configure.ac
ldms/src/contrib/sampler/: Makefile.am
ldms/src/contrib/sampler/daos/: Makefile.am  Plugin_daos_sampler.man  README.md  daos.c  daos.h  pool_target.c  pool_target.h  rank_target.c  rank_target.h
