ACLOCAL_AMFLAGS = -I m4
SUBDIRS = .
lib_LTLIBRARIES =
pkglib_LTLIBRARIES =

if ENABLE_IPMIREADER
    MAYBE_IPMIREADER = ipmireader
endif
SUBDIRS += $(MAYBE_IPMIREADER)


if ENABLE_TUTORIAL_SAMPLER
    MAYBE_TUTORIAL_SAMPLER = tutorial
endif
SUBDIRS += $(MAYBE_TUTORIAL_SAMPLER)

if ENABLE_DAOS_SAMPLER
    MAYBE_DAOS_SAMPLER = daos
endif
SUBDIRS += $(MAYBE_DAOS_SAMPLER)
